vendored/lazy_static/tests/compile_fail/incorrect_visibility_restriction.rs
// Copyright 2026 Andrew Yates.
// Author: Andrew Yates
// Licensed under the Apache License, Version 2.0

#[macro_use]
extern crate lazy_static;

lazy_static! {
    pub(nonsense) static ref WRONG: () = ();
}

fn main() { }
